fix: fixed bugs in alignment

--- a/packages/styles/scss/components/combo-button/_combo-button.scss
+++ b/packages/styles/scss/components/combo-button/_combo-button.scss
@@ -65,39 +65,16 @@
 
 // ==================test==========================================
 
-.#{$prefix}--combo-button__menu-top {
-  $popover-offset: custom-property.get-var('popover-offset', 3rem);
+$popover-offset: custom-property.get-var('popover-offset', 3rem);
 
-  inset-block-start: 0;
-  inset-inline-start: 50%;
-  transform: translate(0%, calc(-100% - $popover-offset));
+.#{$prefix}--combo-button__menu-top {
+  transform: translate(0, calc(-100% - $popover-offset));
 }
 
 .#{$prefix}--combo-button__menu-top-left {
-  $popover-offset: custom-property.get-var('popover-offset', 3rem);
-
-  inset-block-start: 0;
-  inset-inline-end: 0;
-  transform: translate(
-    calc(0 * $popover-offset),
-    calc(-100% - $popover-offset)
-  );
+  transform: translate(0, calc(-100% - $popover-offset));
 }
 
 .#{$prefix}--combo-button__menu-top-right {
-  $popover-offset: custom-property.get-var('popover-offset', 3rem);
-
-  inset-block-start: 0;
-  inset-inline-start: initial;
-  transform: translate(
-    calc(0 * $popover-offset),
-    calc(-100% - $popover-offset)
-  );
-}
-
-.#{$prefix}--combo-button__menu-bottom-left {
-  $popover-offset: custom-property.get-var('popover-offset', 3rem);
-
-  inset-inline-end: 0;
-  inset-inline-start: initial;
+  transform: translate(0, calc(-100% - $popover-offset));
 }
